--- a/sass/header.sass
+++ b/sass/header.sass
@@ -11,11 +11,6 @@ body
 	font-weight: 100
 	font-style: normal
 	.mainHeader
-		&::after
-			content: ""
-			height: 5px
-			width: 100%
-			background-color: #3498DB
 		.header
 			display: flex
 			flex-direction: column
@@ -25,13 +20,14 @@ body
 			background-size: 100%
 			background-attachment: fixed
 			background-repeat: no-repeat
-			padding: 200px
-			p
+			padding: 15%
+			h1
 				font-size: 60px
 				color: #fff
-				margin-top: 15%
-				margin-bottom: 15%
+				margin: 20%
 				animation-duration: 1.5s
+				z-index: 1
+
 
 
 .hidden
